--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                                         <div class="bg-crimson-red separator-line-medium-thick xs-margin-thirteen xs-no-margin-lr"></div>
                                     </div>
                                     <div class="col-md-11 no-padding">
-                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Architecture is inhabited sculpture.</p>
-                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">Architecture begins where engineering ends.</span>
+                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">The best in HVAC industry.</p>
+                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">No one knows HVAC better than we do.</span>
                                     </div>
                                 </div>
                             </div>
