--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                         <div class="bg-crimson-red separator-line-medium-thick xs-margin-thirteen xs-no-margin-lr"></div>
                                     </div>
                                     <div class="col-md-11 no-padding">
-                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Architecture is inhabited sculpture.</p>
-                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">Whatever good things we build end up building us.</span>
+                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Ahmedabad's leading most HVAC service providers.</p>
+                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">A one stop shop for all your HVAC requirements.</span>
                                     </div>
                                 </div>
                             </div>
@@ -127,8 +127,8 @@
                                         <div class="bg-crimson-red separator-line-medium-thick xs-margin-thirteen xs-no-margin-lr"></div>
                                     </div>
                                     <div class="col-md-11 no-padding">
-                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Architecture is inhabited sculpture.</p>
-                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">Architecture is the art of how to use space.</span>
+                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">HVAC solutions in ahmedabad.</p>
+                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">All of your HVAC needs, professionally delivered.</span>
                                     </div>
                                 </div>
                             </div>
