--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                         <div class="bg-crimson-red separator-line-medium-thick xs-margin-thirteen xs-no-margin-lr"></div>
                                     </div>
                                     <div class="col-md-11 no-padding">
-                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Ahmedabad's leading most HVAC service providers.</p>
-                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">A one stop shop for all your HVAC requirements.</span>
+                                        <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">Ahmedabad's leading HVAC service providers.</p>
+                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">A one stop shop for all requirements.</span>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                                     </div>
                                     <div class="col-md-11 no-padding">
                                         <p class="white-text text-uppercase letter-spacing-2 light-gray-text alt-font margin-four no-margin-lr no-margin-top">HVAC solutions in ahmedabad.</p>
-                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">All of your HVAC needs, professionally delivered.</span>
+                                        <span class="white-text font-weight-800 letter-spacing-3 alt-font text-uppercase">All of your HVAC needs, delivered.</span>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> About</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We Believe In<br> The Power Of<br> Design, The<br> Strength Of<br> Strategy.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We Believe In<br> The Power Of<br> Engineering, The<br> Strength Of<br> Management.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
