--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> About</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We Believe In<br> The Power Of<br> Engineering, The<br> Strength Of<br> Management.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">Leading HVAC<br> service providers<br> in gujarat<br> since the inception<br> in 1997.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
