--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                         <div class="architecture-section no-padding-lr md-margin-five md-no-margin-tb xs-no-padding-top">
                             <!-- tab navigation -->
                             <ul class="nav nav-tabs alt-font text-uppercase letter-spacing-1 no-border font-weight-600" role="tablist">
-                                <li role="presentation" class="active xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#creativity" aria-controls="creativity" role="tab" data-toggle="tab" class="xs-display-inline ">Creativity</a></li>
-                                <li role="presentation" class="xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#innovation" aria-controls="innovation" role="tab" data-toggle="tab" class="xs-display-inline ">Innovation</a></li>
-                                <li role="presentation" class="xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#point-of-view" aria-controls="point-of-view" role="tab" data-toggle="tab" class="xs-display-inline ">Point of view</a></li>
+                                <li role="presentation" class="active xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#creativity" aria-controls="creativity" role="tab" data-toggle="tab" class="xs-display-inline ">Profile</a></li>
+                                <li role="presentation" class="xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#innovation" aria-controls="innovation" role="tab" data-toggle="tab" class="xs-display-inline ">Experience</a></li>
+                                <li role="presentation" class="xs-display-block xs-margin-nine xs-no-margin-lr xs-no-margin-top"><a href="#point-of-view" aria-controls="point-of-view" role="tab" data-toggle="tab" class="xs-display-inline ">Philosophy</a></li>
                             </ul>
                             <!-- end tab navigation -->
                             <div class="tab-content clearfix margin-twenty no-margin-lr no-margin-bottom sm-margin-nine sm-no-margin-lr sm-no-margin-bottom">
@@ -201,8 +201,8 @@
                     <!-- end tab -->
                     <div class="col-md-6 col-sm-12 architecture-title overflow-hidden bg-crimson-red xs-min-height-auto">
                         <div class="architecture-section">
-                            <span class="alt-font title-small quote-style2 position-relative white-text">Paul Scrivens philosophy that great design can only be delivered by people with a deep social and cultural understanding of the communities they are designing for.</span>
-                            <span class="text-uppercase white-text margin-seventeen no-margin-lr no-margin-bottom display-block alt-font">Paul Scrivens</span>
+                            <span class="alt-font title-small quote-style2 position-relative white-text">To provide the Best Products, at great prices and backed with efficient sales and services to develop a long term association with our customers.</span>
+                            <span class="text-uppercase white-text margin-seventeen no-margin-lr no-margin-bottom display-block alt-font">Ashish Shah</span>
                             <span class="text-small text-uppercase black-text alt-font">Chairman - Global</span>
                         </div>
                     </div>
