--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <!-- end tab -->
                     <div class="col-md-6 col-sm-12 architecture-title overflow-hidden bg-crimson-red xs-min-height-auto">
                         <div class="architecture-section">
-                            <span class="alt-font title-small quote-style2 position-relative white-text">To provide the Best Products, at great prices and backed with efficient sales and services to develop a long term association with our customers.</span>
+                            <span class="alt-font title-small quote-style2 position-relative white-text">To provide the best products, at great prices and backed with efficient sales and services to develop a long term association with our customers.</span>
                             <span class="text-uppercase white-text margin-seventeen no-margin-lr no-margin-bottom display-block alt-font">Ashish Shah</span>
                             <span class="text-small text-uppercase black-text alt-font">Chairman - Global</span>
                         </div>
@@ -223,7 +223,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> Service</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">Brando is one<br> of the world’s<br> leading global<br> architecture<br> and design.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We are one<br> of the gujarat’s<br> leading global<br> HVAC<br> service providers.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
