--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> Service</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We are one<br> of the gujarat’s<br> leading global<br> HVAC<br> service providers.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We are one<br> of the gujarat’s<br> leading global<br> HVAC service<br> providers.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
@@ -235,7 +235,7 @@
                 <div class="row">
                     <!-- service item -->
                     <div class="col-md-3 col-sm-6 sm-margin-nine sm-no-margin-lr sm-no-margin-top">
-                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">01.</span>&nbsp;&nbsp;Architecture</span>
+                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">01.</span>&nbsp;&nbsp;Installation</span>
                         <img src="http://placehold.it/800x435" alt="" class="margin-twenty-five no-margin-lr sm-margin-eleven sm-no-margin-lr"/>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                         <div class="separator-line-thick bg-crimson-red margin-twenty no-margin-lr sm-no-margin-bottom"></div>
@@ -243,7 +243,7 @@
                     <!-- end service item -->
                     <!-- service item -->
                     <div class="col-md-3 col-sm-6 sm-margin-nine sm-no-margin-lr sm-no-margin-top">
-                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">02.</span>&nbsp;&nbsp;Civil & Structural</span>
+                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">02.</span>&nbsp;&nbsp;Repairing</span>
                         <img src="http://placehold.it/800x435" alt="" class="margin-twenty-five no-margin-lr sm-margin-eleven sm-no-margin-lr "/>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                         <div class="separator-line-thick bg-crimson-red margin-twenty no-margin-lr sm-no-margin-bottom"></div>
@@ -251,7 +251,7 @@
                     <!-- end service item -->
                     <!-- service item -->
                     <div class="col-md-3 col-sm-6">
-                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">03.</span>&nbsp;&nbsp;Landscape design</span>
+                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">03.</span>&nbsp;&nbsp;Refurbishing</span>
                         <img src="http://placehold.it/800x435" alt="" class="margin-twenty-five no-margin-lr sm-margin-eleven sm-no-margin-lr"/>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                         <div class="separator-line-thick bg-crimson-red margin-twenty no-margin-lr xs-margin-twenty xs-no-margin-lr sm-no-margin-bottom"></div>
@@ -259,7 +259,7 @@
                     <!-- end service item -->
                     <!-- service item -->
                     <div class="col-md-3 col-sm-6">
-                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">04.</span>&nbsp;&nbsp;Urban Planning</span>
+                        <span class="text-uppercase text-large alt-font font-weight-600 deep-gray-text"><span class="crimson-red-text">04.</span>&nbsp;&nbsp;Annual Contracts</span>
                         <img src="http://placehold.it/800x435" alt="" class="margin-twenty-five no-margin-lr sm-margin-eleven sm-no-margin-lr"/>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                         <div class="separator-line-thick bg-crimson-red margin-twenty no-margin-lr sm-no-margin-bottom"></div>
@@ -279,10 +279,10 @@
                             <!-- filter navigation -->
                             <ul class="portfolio-filter nav nav-tabs no-border portfolio-filter-tab-style-6 alt-font text-large text-uppercase letter-spacing-1">
                                 <li class="nav active sm-no-padding xs-padding-three"><a href="#" data-filter="*" class="xs-display-inline">All</a></li>
-                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".architecture" class="xs-display-inline">Architecture</a></li>
-                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".civil" class="xs-display-inline">Civil & Structural</a></li>
-                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".landscape" class="xs-display-inline">Landscape Design</a></li>
-                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".urban" class="xs-display-inline">Urban Planning</a></li>
+                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".architecture" class="xs-display-inline">Residential</a></li>
+                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".civil" class="xs-display-inline">Industrial</a></li>
+                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".landscape" class="xs-display-inline">Corporate</a></li>
+                                <li class="nav sm-no-padding xs-padding-three"><a href="#" data-filter=".urban" class="xs-display-inline">Hospitality</a></li>
                             </ul>
                             <!-- end filter navigation -->
                         </div>
@@ -291,7 +291,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> Projects</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">An idea that is<br> not dangerous<br> is unworthy of<br> being called an<br> idea at all.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">Name a business<br> and you'll find<br> us associated<br> with them for<br> their HVAC.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
