--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> People</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">If everyone is<br> moving forward<br> together, then<br> success takes<br> care of itself.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We are a team<br> of highly talented<br> engineers, designers<br> and project managers<br> to cater your needs.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
@@ -1012,8 +1012,8 @@
                             <img src="http://placehold.it/800x864" alt=""/>
                         </div>
                         <div class="architecture-details text-left padding-fifteen center-col md-width-100 xs-width-90">
-                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Sancho Pansa</span>
-                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">CEO, Co-Founder</span>
+                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Ashish Shah</span>
+                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">CEO, Founder</span>
                             <p class="white-text margin-fifteen no-margin-lr width-90 md-margin-three md-no-margin-lr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been standard.</p>
                             <span class="text-uppercase alt-font text-small black-text"><a href="https://www.facebook.com/" target="_blank" class="black-text display-inline-block">Facebook</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" class="black-text display-inline-block">Twitter</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/" target="_blank" class="black-text display-inline-block">Linkedin</a></span>
                         </div>
@@ -1025,8 +1025,8 @@
                             <img src="http://placehold.it/800x864" alt=""/>
                         </div>
                         <div class="architecture-details text-left padding-fifteen center-col md-width-100 xs-width-90">
-                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Herman Miller</span>
-                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">CEO / Architect</span>
+                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Aditi Shah</span>
+                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">Director - Sales</span>
                             <p class="white-text margin-fifteen no-margin-lr width-90 md-margin-three md-no-margin-lr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been standard.</p>
                             <span class="text-uppercase alt-font text-small black-text"><a href="https://www.facebook.com/" target="_blank" class="black-text display-inline-block">Facebook</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" class="black-text display-inline-block">Twitter</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/" target="_blank" class="black-text display-inline-block">Linkedin</a></span>
                         </div>
@@ -1038,8 +1038,8 @@
                             <img src="http://placehold.it/800x864" alt=""/>
                         </div>
                         <div class="architecture-details text-left padding-fifteen center-col md-width-100 xs-width-90">
-                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Bryan Jonhson</span>
-                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">Project Manager</span>
+                            <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Naisargi Shah</span>
+                            <span class="text-small letter-spacing-2 text-uppercase alt-font white-text">Director - Marketing</span>
                             <p class="white-text margin-fifteen no-margin-lr width-90 md-margin-three md-no-margin-lr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been standard.</p>
                             <span class="text-uppercase alt-font text-small black-text"><a href="https://www.facebook.com/" target="_blank" class="black-text display-inline-block">Facebook</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" class="black-text display-inline-block">Twitter</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/" target="_blank" class="black-text display-inline-block">Linkedin</a></span>
                         </div>
