--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-12 no-padding architecture-title sm-min-height-auto">
                         <div class="architecture-section">
                             <span class="title-extra-large alt-font font-weight-600 text-uppercase deep-gray-text display-block sm-title-large"><span class="crimson-red-text">/</span> Recent Blog</span>
-                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">There’s nothing<br> wrong with<br> reading a book<br> you love over<br> and over.</h2>
+                            <h2 class="alt-font text-uppercase font-weight-600 light-gray-text2 md-title-large sm-title-medium xs-br-display-none">We've curated a<br> few posts<br> for you to know<br> the HVAC solutions<br> that you need.</h2>
                         </div>
                     </div>
                     <!-- end section title -->
