--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
                     <div class="col-md-12 col-sm-12 text-center">
                         <div class="footer-social position-relative top4 social-icon">
                             <!-- social media link -->
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com" target="_blank"><i class="fa fa-google-plus"></i></a><a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a><a href="https://dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
                             <!-- end social media link -->
                         </div>
                     </div>
