--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section id="home" class="no-padding">
             <div class="owl-slider-full owl-carousel owl-theme light-pagination square-pagination dark-pagination-without-next-prev-arrow main-slider">
                 <!-- slider item -->
-                <div class="item owl-bg-img" style="background-image:url('http://placehold.it/1920x1050');">
+                <div class="item owl-bg-img" style="background-image:url("images/1920x1050.jpg");">
                     <div class="opacity-medium bg-dark-gray"></div>
                     <div class="container full-screen position-relative">
                         <div class="col-md-12 slider-typography text-left">
